--- a/meowlab.ipynb
+++ b/meowlab.ipynb
@@ -60,21 +60,8 @@
      "output_type": "stream",
      "text": [
       "Filesystem      Size  Used Avail Use% Mounted on\n",
-      "/dev/sdd       1007G   22G  935G   3% /\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "bash: line 10: bc: command not found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Disk space is sufficient: 935G\n"
+      "/dev/sdd       1007G   27G  930G   3% /\n",
+      "Disk space is sufficient: 930G\n"
      ]
     }
    ],
